--- a/html/projects/video-games/rolling-food-chain.html
+++ b/html/projects/video-games/rolling-food-chain.html
@@ -40,8 +40,8 @@
             </div>
             <p>Overall this was a really good experience, we ended up ranking 184th out of 7604, and we're pretty happy with the result.Many people enjoyed the game and it's always super cool to see people have fun with what you create :) </p>
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/rolling-food-chain/rfc-gameplay.gif" style="width: 49%;">
-                <img src="../../../img/video-games/rolling-food-chain/rfc-intro.gif" style="width: 49%;">
+                <img src="/img/video-games/rolling-food-chain/rfc-gameplay.gif" style="width: 49%;">
+                <img src="/img/video-games/rolling-food-chain/rfc-intro.gif" style="width: 49%;">
             </div> 
         </div>
 
@@ -65,8 +65,8 @@
 
     <footer id="footer"></footer>
 
-    <script src="../../../data/video-games.js"></script>
-    <script src="../../../js/vg-template.js"></script>
+    <script src="/data/video-games.js"></script>
+    <script src="/js/vg-template.js"></script>
     <script src="/js/mouse-cursor.js"></script>
     <script src="/js/components/navbar.js"></script>
     <script src="/js/components/footer.js"></script>
