--- a/html/projects/video-games/saudade.html
+++ b/html/projects/video-games/saudade.html
@@ -36,10 +36,10 @@
             <h3>The pitch</h3>
             <p>Link to my <a class="link-in-text" href="https://drive.google.com/file/d/1sQOz81p_tzF_wwqsDyKOMH7eDjz9UlvM/view?usp=sharing" target="_blank" >initial pitch for the administration</a>.</p>
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/saudade/saudade-idea.jpg" style="width: 100%; margin-bottom: 0;"> 
+                <img src="/img/video-games/saudade/saudade-idea.jpg" style="width: 100%; margin-bottom: 0;"> 
             </div><br>
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/saudade/saudade-gameplay-example.jpg" style="width: 100%; margin-bottom: 0;"> 
+                <img src="/img/video-games/saudade/saudade-gameplay-example.jpg" style="width: 100%; margin-bottom: 0;"> 
             </div><br>
             <p>The story of Saudade was heavily <span class="text-highlight">inspired by my grandfather's life</span>. He grew up in <span class="text-highlight">Portugal, but had to come to France at the age of 17</span>. That's also where the name of the game <span class="text-highlight">"Saudade"</span> comes from. It's a <span class="text-highlight">portuguese word that's not easily translated in french</span> but means something along the lines of : <span class="text-highlight">"Deep nostalgic longing for someone or something absent, infused with a melancholic awareness that it may never return"</span>. </p>
             <p>This story is about having to leave your own country and miss it from afar. But it's also about <span class="text-highlight">paving your own way, tracing your path</span> - just like the player will do during the game - and <span class="text-highlight">missing home / thinking about what home is to you</span>.</p>
@@ -74,7 +74,7 @@
                     <p class="project-window-title" id="project-id">PLAY</p>
                 </div>
                 <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                    <a class="external-link" href="" target="_blank">Discover the game</a>
+                    <a class="external-link" href="https://store.steampowered.com/app/3448310/Saudade/" target="_blank">Discover the game</a>
                 </div>
             </div>
             <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">We&#39;ve been working for a few weeks on Saudade, our 2nd year project at <a href="https://twitter.com/Cnam_Enjmin?ref_src=twsrc%5Etfw">@Cnam_Enjmin</a> !<br><br>The game relies on a time loop, similar to Minit. Below an example of what a path improvement could look like with only 10s.<br><br>I&#39;ve started writing a page on my portfolio, link in my bio :) <a href="https://t.co/WPLeQY8FoS">pic.twitter.com/WPLeQY8FoS</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1859256336397054173?ref_src=twsrc%5Etfw">November 20, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -87,8 +87,8 @@
 
     <footer id="footer"></footer>
 
-    <script src="../../../data/video-games.js"></script>
-    <script src="../../../js/vg-template.js"></script>
+    <script src="/data/video-games.js"></script>
+    <script src="/js/vg-template.js"></script>
     <script src="/js/mouse-cursor.js"></script>
     <script src="/js/components/navbar.js"></script>
     <script src="/js/components/footer.js"></script>
