--- a/html/projects/video-games/space-love-blouge.html
+++ b/html/projects/video-games/space-love-blouge.html
@@ -42,8 +42,8 @@
             <p>Now, there's no huge technical aspect to this game but we were able to exhibit it at Safra'Numériques in Amiens, Game in Noisy, IdeenExpo in Hannover and A MAZE in Berlin (we even got the chance to go there, visit the city and meet many cool game developers !).</p>
             <p>Just for that I think it's worth writing a few words about Space, Love and Blouge :)</p>
             <div class="div-row" style="width: 100%;">
-                <img src="../../../img/video-games/space-love-blouge/slb-amaze1.jpg" style="width: 49%;">
-                <img src="../../../img/video-games/space-love-blouge/slb-amaze2.jpg" style="width: 49%;">
+                <img src="/img/video-games/space-love-blouge/slb-amaze1.jpg" style="width: 49%;">
+                <img src="/img/video-games/space-love-blouge/slb-amaze2.jpg" style="width: 49%;">
             </div> 
         </div>
 
@@ -68,8 +68,8 @@
 
     <footer id="footer"></footer>
 
-    <script src="../../../data/video-games.js"></script>
-    <script src="../../../js/vg-template.js"></script>
+    <script src="/data/video-games.js"></script>
+    <script src="/js/vg-template.js"></script>
     <script src="/js/mouse-cursor.js"></script>
     <script src="/js/components/navbar.js"></script>
     <script src="/js/components/footer.js"></script>
