--- a/html/projects/video-games/creeping-deck.html
+++ b/html/projects/video-games/creeping-deck.html
@@ -31,7 +31,7 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column">
-            <p><b>2022-23</b> <b>TavroxGames</b> <b>Unity</b> <b>DOTween</b> <b>Odin Inspector</b></p>
+            <p><b>2022-2023</b> <b>TavroxGames</b> <b>Unity</b> <b>DOTween</b> <b>Odin Inspector</b></p>
             <p>To start off my apprenticeship at TavroxGames, I had the occasion to work on Creeping deck : Pharaoh's curse, a deckbuilding game on the theme of Egyptian mythology. I only worked three weeks on the project, mainly on FX. Things such as a text indicating the number of damage popping on the screen, the chest opening or the arrow following the mouse in fight. I also worked on making it possible to have multiple ennemies in fight.</p>
             <div class="div-row" style="width: 100%;">
                 <img src="../../../img/video-games/creeping-deck/cd-arrow.gif" style="width: 49%;">
@@ -56,8 +56,8 @@
 
     <footer id="footer"></footer>
 
-    <script src="../../../data/video-games.js"></script>
-    <script src="../../../js/vg-template.js"></script>
+    <script src="/data/video-games.js"></script>
+    <script src="/js/vg-template.js"></script>
     <script src="/js/mouse-cursor.js"></script>
     <script src="/js/components/navbar.js"></script>
     <script src="/js/components/footer.js"></script>
