--- a/html/projects/video-games/protectors-of-pomelo.html
+++ b/html/projects/video-games/protectors-of-pomelo.html
@@ -66,8 +66,8 @@
 
     <footer id="footer"></footer>
 
-    <script src="../../../data/video-games.js"></script>
-    <script src="../../../js/vg-template.js"></script>
+    <script src="/data/video-games.js"></script>
+    <script src="/js/vg-template.js"></script>
     <script src="/js/mouse-cursor.js"></script>
     <script src="/js/components/navbar.js"></script>
     <script src="/js/components/footer.js"></script>
