Clean : video game page css

--- a/html/projects/video-games.html
+++ b/html/projects/video-games.html
@@ -25,18 +25,14 @@
 
     <navbar id="navbar"></navbar>
 
-    <div class="grid grid-video-game-1"></div>
+    <div class="grid"></div>
     <section id="landing-section" style="width: 75%;">
       <h1>VIDEO GAMES</h1>
     </section>
 
     <!------------------------------------------------------ VIDEO GAME -------------------------------------------->
 
-    <div
-      class="div-row"
-      id="filter-btn-container"
-      style="justify-content: flex-start; width: 75%;"
-    >
+    <div class="div-row" id="filter-btn-container" style="justify-content: flex-start; width: 75%;">
       <a class="btn1 filter-active-btn" onclick="filterSelection('all')">ALL</a>
       <a class="btn1" onclick="filterSelection('technical')">TECHNICAL</a>
       <a class="btn1" onclick="filterSelection('work')">WORK</a>
