Fix : other projects color + grid color in blog

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                         </div>
                     </div>
                         <div class="div-row" style="justify-content: flex-end">
+                            
         <div class="project-window2" href="./html/index/jeu_video.html">
           <div class="project-window-navbar">
             <p class="project-window-title" id="project-id">Social media</p>
@@ -97,7 +98,17 @@
             /></a>
           </div>
         </div>
-    </div>
+
+        <div class="project-window2" href="./html/index/jeu_video.html" style="height: 200px; margin: 0;">
+            <div class="project-window-navbar">
+                <p class="project-window-title" id="project-id">CURRICULUM</p>
+            </div>
+            <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                <a class="external-link" href="https://drive.google.com/file/d/1ZDslddfX5GhAbCBHaL0nLVg0M8ZXx72-/view?usp=sharing" target="_blank">GAMEPLAY PROGRAMMER</a>
+            </div>
+        </div>
+
+        </div>
                 </div>
             </div>
         </section>
