Add : update home page

--- a/index.html
+++ b/index.html
@@ -27,116 +27,101 @@
     
     <div class="grid grid-index-1"></div>
     <section id="landing-section">
-        <h1>Alvina Damasio--Razafiarizaka</h1>
+        <h1>Game Programmer Portfolio</h1>
+        <div class="scroll-text-div" style="width: 40%; margin: 0;">
+            <div style="width: 10000000px">
+                <div class="scroll-text"><div style="width: calc(3vw*26 + .1em); height: 10px; background-repeat: repeat;
+                    background-image: url('/img/dash.png');"></div></div>
+                <div class="scroll-text"><div style="width: calc(3vw*26 + .1em); height: 10px; background-repeat: repeat;
+                    background-image: url('/img/dash.png');"></div></div>
+            </div>
+        </div>
     </section>
 
     <div class="div-row" id="index-main-section">
         <!-- ABOUT ME  -->
         <section id="about-section">
             <div>
-                <h3>About me</h3>
-                <p>Hi there ! I'm Alvina, a <span class="text-highlight">freelance game programmer</span> living in Bordeaux. I love playing narrative video games such as <span class="text-highlight">Outer Wilds</span> or <span class="text-highlight">Disco Elysium</span>.<br> <span class="text-highlight">Telling stories and learning</span> are two big aspects of my life and I think that both these things can <span class="text-highlight">mix in video games</span> which is something I really want to <span class="text-highlight">convey in what I do</span>.</p>   
-                <a href="html/about.html#about-me-section" class="btn1 btn-more">More ►</a>
+                <p>Hi there ! My name is Alvina and I’m a <span class="text-highlight">freelance game programmer</span> :)</p>   
+
+                <h3>What I do</h3>
+                <p>Mainly a <span class="text-highlight">gameplay programmer</span>, I specialize in <span class="text-highlight">prototype</span> creation and try to put an emphasis on gamefeel to <span class="text-highlight">make juicy games quickly</span>. I also sometimes work as a <span class="text-highlight">technical artist</span> or <span class="text-highlight">tool developer</span> depending on the needs of the project. Exceptionally will get into <span class="text-highlight">web design and development</span> for short missions that inspire me.</p>  
+
+                <h3>Experience</h3>
+                <p>I have worked at <span class="text-highlight"><a class="link-in-text" href="https://twitter.com/Blanket_Games" target="_blank">Blanket Games</a></span> for a year, followed by an internship at <span class="text-highlight"><a class="link-in-text" href="https://www.virtuosgames.com/" target="_blank">Virtuos</a></span> as a junior software engineer in Cergy. I was an intern at <span class="text-highlight"><a class="link-in-text" href="https://www.hookariagames.com/" target="_blank">Hookaria Games</a></span> for six months and graduated from <span class="text-highlight"><a class="link-in-text" href="https://enjmin.cnam.fr/enjmin/ecole-nationale-du-jeu-et-des-medias-interactifs-accueil-1126103.kjsp" target="_blank">ENJMIN</a></span> in 2025 :)</p>
+
+                <h3>My work</h3>
+                <p style="margin-bottom: 0;">From prototypes to released games, I was able to work on many projects. You can <span class="text-highlight">learn more about my work below</span> : </p>   
+                <a class="external-link" style="width: 100%; text-align: right; margin-bottom: 10px;" href="/html/projects/video-games.html">See more games I worked on</a>
+
+                <h3>Contact</h3>
+                <p>You can contact me if you have questions or want to work together : <span class="text-highlight">alvinadr24@gmail.com</span></p>
             </div>
         </section>
 
         <!-- PROJET SECTION -->
         <section id="project-section">
-            <div class="div-row project-div" >
-                <div class="project-window1" style="width:80%">
-                    <img class="project-window1-image text-zone" id='project-image-a' src="./img/cover-favorite.jpg" />
-                    <a class="btn1 project-window-btn-more" id='project-link'>Discover</a>
-                    <div class="project-card-data">
-                        <div class="project-card-content">
-                            <p id="project-nav-title" class="project-window-title" ></p>
-                            <div id='new-tag' class="scroll-text-new-div new-tag">
-                                <div style="width: 1000px">
-                                    <div class="scroll-text-new" >
-                                        <h5>&nbsp;NEW • NEW • NEW • NEW • NEW • NEW • NEW • NEW •</h5>
-                                    </div>
-                                    <div class="scroll-text-new">
-                                        <h5>&nbsp;NEW • NEW • NEW • NEW • NEW • NEW • NEW • NEW •</h5>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+            <div class="project-window1" style="width:100%; margin: 0 0 10px 0;">
+                <img class="project-window1-image text-zone" id='project-image-a' onclick="window.location = '/html/projects/video-games/saudade.html'" src="./img/saudade.png"/>
+                <a class="btn1 project-window-btn-more" id="project-link" href="/html/projects/video-games.html" style="display: none;"></a>
+                <div class="project-card-data">
+                    <div class="project-card-content">
+                        <p id="project-nav-title" class="project-window-title" >Currently working on Saudade 🔥</p>
                     </div>
                 </div>
-                <div class="div-column" style="width:50%">
-                    <div id="project-menu">
-                    </div>
-                    <div class="project-window2" href="./html/index/jeu_video.html" >
-                        <div class="project-window-navbar">
-                            <p class="project-window-title" id="project-id"></p>
-                        </div>
-                        <div class="project-window-content">
-                            <h3 id="project-title"></h3>
-                            <p id="project-text"></p>
-                        </div>
-                        <div style="position:absolute; bottom: 0; right:0; padding: 5px; display: flex; align-items: flex-end;">
-                            <button id="left-button">◄</button>
-                            <button id="right-button">►</button>
-                        </div>
-                    </div>
-                        <div class="div-row" style="justify-content: flex-end">
-                            
-        <div class="project-window2" href="./html/index/jeu_video.html">
-          <div class="project-window-navbar">
-            <p class="project-window-title" id="project-id">Social media</p>
-          </div>
-          <div class="project-window-content div-row">
-            <a href="https://www.linkedin.com/in/alvina-dr/" target="_blank"
-              ><img src="../img/icons/linkedin.svg" class="icon-social-media"
-            /></a>
-            <a href="https://twitter.com/alvina_dr_" target="_blank"
-              ><img src="../img/icons/twitter.svg" class="icon-social-media"
-            /></a>
-            <a
-              href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"
-              target="_blank"
-              ><img src="../img/icons/youtube.svg" class="icon-social-media"
-            /></a>
-          </div>
-        </div>
-
-        <div class="project-window2" href="./html/index/jeu_video.html" style="height: 200px; margin: 0;">
-            <div class="project-window-navbar">
-                <p class="project-window-title" id="project-id">CURRICULUM</p>
             </div>
-            <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
-                <a class="external-link" href="https://drive.google.com/file/d/1ZDslddfX5GhAbCBHaL0nLVg0M8ZXx72-/view?usp=sharing" target="_blank">GAMEPLAY PROGRAMMER</a>
-            </div>
-        </div>
 
-        </div>
+            <a class="external-link" style="width: 100%; text-align: right; margin-bottom: 10px;" href="/html/projects/video-games/saudade.html">Learn more about Saudade</a>
+
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; width: 100%; margin: 0 0 10px 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">Blog</p>
+                </div>
+                <div class="project-window-content" style="display: flex; flex-direction: column;">
+                    <p>Coming soon</p>
+                    <!-- <a class="external-link" href="">25.08.2025 - Internship at hookaria games</a>
+                    <a class="external-link" href="">06.08.2025 - How to quickly add gamefeel to a prototype ?</a>
+                    <a class="external-link" href="">07.01.2025 - Making a level design tool for Saudade</a> -->
+                </div>
+            </div>
+
+            <div class="div-row" style="width: 100%; margin: 0;">
+                <div class="project-window2" href="./html/index/jeu_video.html">
+                    <div class="project-window-navbar">
+                        <p class="project-window-title" id="project-id">Social media</p>
+                    </div>
+                    <div class="project-window-content div-row">
+                        <a href="https://www.linkedin.com/in/alvina-dr/" target="_blank"
+                        ><img src="/img/icons/linkedin.png" onmouseover="this.src='/img/icons/linkedin-hover.png'" onmouseout="this.src='/img/icons/linkedin.png';" class="icon-social-media"/></a>
+                        <a href="https://twitter.com/alvina_dr_" 
+                        target="_blank"><img src="/img/icons/x.png" onmouseover="this.src='/img/icons/x-hover.png'" onmouseout="this.src='/img/icons/x.png';" class="icon-social-media"/></a>
+                        <a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"
+                        target="_blank"><img src="/img/icons/youtube.png" onmouseover="this.src='/img/icons/youtube-hover.png'" onmouseout="this.src='/img/icons/youtube.png';" class="icon-social-media"/></a>
+                        <a href="https://alvina-dr.itch.io/"
+                        target="_blank"><img src="/img/icons/itch.png" onmouseover="this.src='/img/icons/itch-hover.png'" onmouseout="this.src='/img/icons/itch.png';" class="icon-social-media"/></a>
+                        <a href="https://bsky.app/profile/alvina-dr.bsky.social"
+                        target="_blank"><img src="/img/icons/bluesky.png" onmouseover="this.src='/img/icons/bluesky-hover.png'" onmouseout="this.src='/img/icons/bluesky.png';" class="icon-social-media"/></a>
+                    </div>
+                </div>
+
+                <div class="project-window2" href="./html/index/jeu_video.html" style=" width: 100%; margin-left: 10px;">
+                    <div class="project-window-navbar">
+                        <p class="project-window-title" id="project-id">CURRICULUM</p>
+                    </div>
+                    <div class="project-window-content">
+                        <a class="external-link" href="https://drive.google.com/file/d/1ZDslddfX5GhAbCBHaL0nLVg0M8ZXx72-/view?usp=sharing" target="_blank">GAMEPLAY PROGRAMMER</a>
+                    </div>
                 </div>
             </div>
         </section>
-    </div>
-
-
-    <div style="width: calc(3vw*26 + .1em); height: 10px; background-repeat: repeat;
-    margin: auto; background-image: url('/img/dash.png');"></div>
-
-    <div class="scroll-text-div">
-        <div style="width: 10000000px">
-            <div class="scroll-text" >
-            <div style="width: calc(3vw*26 + .7em); height: 10px; background-repeat: repeat;
-             background-image: url('/img/dash.png');"></div>    </div>
-            <div class="scroll-text">
-            <div style="width: calc(3vw*26 + .1em); height: 10px; background-repeat: repeat;
-             background-image: url('/img/dash.png');"></div>    </div>
-        </div>
     </div>
 
     <div id="scrolling-text" class="scroll-text-div"></div>
 
     <footer id="footer"></footer>
 
-    <script src="data/projects.js"></script>
-    <script src="js/project-system.js"></script>
-    <script src="js/mouse-cursor.js"></script>
-    <script src="js/circle-text.js"></script>
+    <script src="/js/mouse-cursor.js"></script>
+    <script src="/js/circle-text.js"></script>
     <script src="/js/components/navbar.js"></script>
     <script src="/js/components/scrolling-text.js"></script>
     <script src="/js/components/footer.js"></script>
