Fix : gameplay programmer portfolio title

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
     <section id="landing-section">
         <h1>Game Programmer Portfolio</h1>
         <div class="scroll-text-div" style="width: 40%; margin: 0;">
-            <div style="width: 10000000px">
-                <div class="scroll-text"><div style="width: calc(3vw*26 + .1em); height: 10px; background-repeat: repeat;
+            <div style="width: 10000000px; height: 15px; display: flex; align-items: start;">
+                <div class="scroll-text"><div style="width: calc(3vw*26 + .1em); height: 6px; background-repeat: repeat;
                     background-image: url('/img/dash.png');"></div></div>
-                <div class="scroll-text"><div style="width: calc(3vw*26 + .1em); height: 10px; background-repeat: repeat;
+                <div class="scroll-text"><div style="width: calc(3vw*26 + .1em); height: 6px; background-repeat: repeat;
                     background-image: url('/img/dash.png');"></div></div>
             </div>
         </div>
