Add : copy mail adress

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class="external-link" style="width: 100%; text-align: right; margin-bottom: 10px;" href="/html/projects/video-games.html">See more games I worked on</a>
 
                 <h3>Contact</h3>
-                <p>You can contact me if you have questions or want to work together : <span class="text-highlight">alvinadr24@gmail.com</span></p>
+                <p>You can contact me if you have questions or want to work together : <span class="text-highlight"><a href="javascript:void(0);" onclick="CopyText()">alvinadr24@gmail.com</a></span></p>
             </div>
         </section>
 
@@ -121,6 +121,7 @@
     <footer id="footer"></footer>
 
     <script src="/js/mouse-cursor.js"></script>
+    <script src="/js/copy.js"></script>
     <script src="/js/circle-text.js"></script>
     <script src="/js/components/navbar.js"></script>
     <script src="/js/components/scrolling-text.js"></script>
