--- a/html/projects/video-games/saudade.html
+++ b/html/projects/video-games/saudade.html
@@ -6,13 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alvina DR | Saudade</title>
 
-    <link rel="stylesheet" href="../../../css/main.css">
-    <link rel="stylesheet" href="../../../css/text.css">
-    <link rel="stylesheet" href="../../../css/page-specific-project.css">
-    <link rel="stylesheet" href="../../../css/page-specific-project.css">
-    <link rel="stylesheet" href="../../../css/pointer.css">
-    <link rel="stylesheet" href="../../../css/blog.css">
-    <link rel="stylesheet" href="../../../css/project-window.css">
+    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="/css/text.css">
+    <link rel="stylesheet" href="/css/page-specific-project.css">
+    <link rel="stylesheet" href="/css/pointer.css">
+    <link rel="stylesheet" href="/css/blog.css">
+    <link rel="stylesheet" href="/css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
@@ -78,8 +77,7 @@
                 </div>
             </div>
             <blockquote class="twitter-tweet" data-theme="dark"><p lang="en" dir="ltr">We&#39;ve been working for a few weeks on Saudade, our 2nd year project at <a href="https://twitter.com/Cnam_Enjmin?ref_src=twsrc%5Etfw">@Cnam_Enjmin</a> !<br><br>The game relies on a time loop, similar to Minit. Below an example of what a path improvement could look like with only 10s.<br><br>I&#39;ve started writing a page on my portfolio, link in my bio :) <a href="https://t.co/WPLeQY8FoS">pic.twitter.com/WPLeQY8FoS</a></p>&mdash; Alvina (@alvina_dr_) <a href="https://twitter.com/alvina_dr_/status/1859256336397054173?ref_src=twsrc%5Etfw">November 20, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-            <div style="margin-top: 1rem;">
-            </div>
+            <div style="margin-top: 1rem;"></div>
         </div>
     </section>
 
