--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class="external-link" style="width: 100%; text-align: right; margin-bottom: 10px;" href="/html/projects/video-games.html">See more games I worked on</a>
 
                 <h3>Contact</h3>
-                <p>You can contact me if you have questions or want to work together : <span class="text-highlight"><a href="javascript:void(0);" onclick="CopyText()">alvinadr24@gmail.com</a></span></p>
+                <p>You can contact me if you have questions or want to work together : <span class="text-highlight"><a href="javascript:void(0);" class="link-in-text" onclick="CopyText()">alvinadr24@gmail.com</a></span></p>
             </div>
         </section>
 
@@ -78,9 +78,8 @@
                     <p class="project-window-title" id="project-id">Blog</p>
                 </div>
                 <div class="project-window-content" style="display: flex; flex-direction: column;">
-                    <p>Coming soon</p>
-                    <!-- <a class="external-link" href="">25.08.2025 - Internship at hookaria games</a>
-                    <a class="external-link" href="">06.08.2025 - How to quickly add gamefeel to a prototype ?</a>
+                    <a class="external-link" href="/html/projects/blog/hookaria-games-internship.html">02.09.2025 - Internship at hookaria games</a>
+                    <!-- <a class="external-link" href="">06.08.2025 - How to quickly add gamefeel to a prototype ?</a>
                     <a class="external-link" href="">07.01.2025 - Making a level design tool for Saudade</a> -->
                 </div>
             </div>
