--- a/html/projects/video-games/hold-the-mine.html
+++ b/html/projects/video-games/hold-the-mine.html
@@ -34,15 +34,20 @@
     <section id="blog-section" class="div-row">
         <div class="div-column">
             <p><b>2025 📆</b> <b>Unity</b></p>
-            <p>Explore and defend your mine against waves of monsters in this innovative roguelike survival game! Collect and manage your resources, discover buildings with unique effects and unleash mighty heroes to hold monsters out of the mine until the sun rises.</p>
+            <p><i>Explore and defend your mine against waves of monsters in this innovative roguelike survival game ! Collect and manage your resources, discover buildings with unique effects and unleash mighty heroes to hold monsters out of the mine until the sun rises.</i></p>
+            <p>I was able to work on Hold The Mine during my internship at Hookaria Games (to learn more about the internship, you can read this article : <a class="link-in-text" href="/html/blog/hookaria-games-internship.html" target="_blank">02.09.2025 - Hookaria Games Internship</a>)</p>
             <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
                 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/bUPZy2_UT1Y?si=iFOqG4vsZ89DEAjs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
-            <p>WIP</p>
+            <p>Basically, Hold The Mine is composed of two phases, night and day. During the day you mine blocks to find resources, create buildings, discover new heroes and unlock their powers. During the night it’s a battle for survival against hordes of enemies ! You can help your heroes by unleashing special abilities given by some buildings. Your goal is to survive through ten nights !</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="/img/video-games/sandwalkers/sandwalkers-map-editor1.gif" style="width: 49%;">
+                <img src="/img/video-games/sandwalkers/sandwalkers-title.png" style="width: 49%;">
+            </div>
         </div>
         
         <div class="div-column">
-            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+            <div class="project-window2" href="/html/index/jeu_video.html" style="height: fit-content; margin: 0;">
                 <div class="project-window-navbar">
                     <p class="project-window-title" id="project-id">PLAY</p>
                 </div>
